--- a/src/userRegistration/RegistrationStyle.css
+++ b/src/userRegistration/RegistrationStyle.css
@@ -13,17 +13,6 @@
 	-fx-font-size: 14;
 }
 
-.menu_buttom:hover {
-	-fx-font-weight: normal;
-	-fx-font-size: 14;
-	-fx-text-fill: white;
-}
-
-.menu_buttom:focused {
-	-fx-background-color: #325c6a;
-	-fx-text-fill: white;
-}
-
 .starter_buttom {
 	-fx-background-color: linear-gradient(to bottom left, #00A9CC, #020024);
 	-fx-font-weight: normal;
@@ -36,7 +25,7 @@
 	-fx-background-color: white;
 	-fx-font-weight: normal;
     -fx-font-size: 20;
-    -fx-text-fill: #000000b0;
+    -fx-text-fill: #00000080;
     -fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
     -fx-border-width: 4;
     -fx-border-radius: 20;
@@ -48,7 +37,7 @@
 	-fx-font-family: "Ebrima";
     -fx-font-size: 14;
     -fx-background-radius: 12;
-    -fx-text-fill: #000000b0;
+    -fx-text-fill: #00000080;
     -fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
     -fx-border-width: 3;
     -fx-border-radius: 12;
@@ -58,7 +47,7 @@
 	-fx-font-family: "Ebrima";
 	-fx-font-weight: normal;
     -fx-font-size: 14;
-    -fx-text-fill: #00000098;
+    -fx-text-fill: #00000080;
     -fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
     -fx-border-width: 3;
     -fx-border-radius: 12;
@@ -69,7 +58,7 @@
 	-fx-background-color: white;
 	-fx-font-weight: normal;
     -fx-font-size: 11;
-    -fx-text-fill: #000000b0;
+    -fx-text-fill: #00000080;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
 	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
@@ -78,14 +67,22 @@
 .window_button:hover {
 	-fx-background-color: #d8d8d8;
 	-fx-font-weight: normal;
-    -fx-text-fill: #00000098;
+    -fx-text-fill: #00000080;
 	-fx-border-width: 2;
+	-fx-font-size: 11;
     -fx-border-radius: 40;
 	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
 }
 
 .comboBox {
 	-fx-font-size: 10pt;
+	-fx-text-fill: #00000080;
+	-fx-font-weight: normal;
+    -fx-font-family: "Ebrima";
+}
+.comboBox .list-view .list-cell {
+	-fx-font-size: 10pt;
+	-fx-text-fill: #00000080;
 	-fx-font-weight: normal;
     -fx-font-family: "Ebrima";
 }
