--- a/src/dialogPopUp/DialogPopUpStyle.css
+++ b/src/dialogPopUp/DialogPopUpStyle.css
@@ -13,7 +13,7 @@
 	-fx-background-color: white;
 	-fx-font-weight: normal;
     -fx-font-size: 12;
-    -fx-text-fill: #000000b0;
+    -fx-text-fill: #00000080;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
 	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
@@ -23,8 +23,15 @@
 	-fx-background-color: #d8d8d8;
 	-fx-font-weight: normal;
     -fx-font-size: 12;
-    -fx-text-fill: #00000098;
+    -fx-text-fill: #00000080;
 	-fx-border-width: 2;
     -fx-border-radius: 40;
 	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
+}
+
+.message {
+	-fx-font-weight: normal;
+    -fx-font-size: 14;
+    -fx-text-fill: #00000080;
+    -fx-font-family: "Ebrima";
 }
