--- a/src/doctorAccountPane/DoctorAccountLayout.fxml
+++ b/src/doctorAccountPane/DoctorAccountLayout.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="965.0" styleClass="white_color" stylesheets="@DoctorAccountStyle.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="doctorAccountPane.DoctorAccountController">
+<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="965.0" styleClass="white_color" stylesheets="@DoctorAccountStyle.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="doctorAccountPane.DoctorAccountController">
    <children>
       <Label layoutX="106.0" layoutY="25.0" prefHeight="32.0" prefWidth="143.0" text="Your account" textFill="#00000080">
          <font>
@@ -29,20 +32,58 @@
             <Image url="@../icons/doctor_black.png" />
          </image>
       </ImageView>
-      <Label fx:id="userNameLabel" layoutX="69.0" layoutY="120.0" text="Name: not found" textFill="#00000080">
+      <Label fx:id="userNameLabel" layoutX="604.0" layoutY="456.0" styleClass="label_text2" text="Name: not found" textFill="#00000080">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="userDoctorIdLabel" layoutX="69.0" layoutY="160.0" text="Doctor Identification: not found" textFill="#00000080">
+      <Label fx:id="userDoctorIdLabel" layoutX="604.0" layoutY="496.0" styleClass="label_text2" text="Doctor Identification: not found" textFill="#00000080">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
-      <Label fx:id="userEmailLabel" layoutX="69.0" layoutY="200.0" text="Doctor Email: not found" textFill="#00000080">
+      <Label fx:id="userEmailLabel" layoutX="604.0" layoutY="536.0" styleClass="label_text2" text="Doctor Email: not found" textFill="#00000080">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
+      <ImageView fitHeight="270.0" fitWidth="270.0" layoutX="595.0" layoutY="148.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../icons/doctor_account.png" />
+         </image>
+      </ImageView>
+      <Separator layoutX="523.0" layoutY="88.0" orientation="VERTICAL" prefHeight="600.0" prefWidth="0.0" />
+      <JFXTextField fx:id="userEmail" focusColor="#0193bb" labelFloat="true" layoutX="129.0" layoutY="169.0" prefHeight="45.0" prefWidth="240.0" promptText="Doctor email" styleClass="text-field" stylesheets="@../userRegistration/RegistrationStyle.css" unFocusColor="#00000080">
+         <font>
+            <Font name="Ebrima" size="14.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="userName" focusColor="#0193bb" labelFloat="true" layoutX="129.0" layoutY="244.0" prefHeight="45.0" prefWidth="240.0" promptText="Doctor name" styleClass="text-field" stylesheets="@../userRegistration/RegistrationStyle.css" unFocusColor="#00000080">
+         <font>
+            <Font name="Ebrima" size="14.0" />
+         </font>
+      </JFXTextField>
+      <Label layoutX="129.0" layoutY="119.0" styleClass="label_text2" text="Update doctor account" textFill="#0000007e">
+         <font>
+            <Font name="Ebrima" size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="130.0" layoutY="407.0" styleClass="label_text2" text="Change password" textFill="#0000007e">
+         <font>
+            <Font name="Ebrima" size="18.0" />
+         </font>
+      </Label>
+      <JFXButton layoutX="139.0" layoutY="316.0" onMouseClicked="#updateAccount" prefWidth="220.0" styleClass="change_button" text="Update Account" />
+      <JFXButton layoutX="134.0" layoutY="609.0" onMouseClicked="#changePassword" prefWidth="220.0" styleClass="change_button" text="Change password" />
+      <JFXPasswordField fx:id="userNewPassword" focusColor="#0193bb" labelFloat="true" layoutX="129.0" layoutY="457.0" prefHeight="45.0" prefWidth="240.0" promptText="New password" unFocusColor="#00000080">
+         <font>
+            <Font name="Ebrima" size="14.0" />
+         </font>
+      </JFXPasswordField>
+      <JFXPasswordField fx:id="userOldPassword" focusColor="#0193bb" labelFloat="true" layoutX="129.0" layoutY="537.0" prefHeight="45.0" prefWidth="240.0" promptText="Old password" unFocusColor="#00000080">
+         <font>
+            <Font name="Ebrima" size="14.0" />
+         </font>
+      </JFXPasswordField>
    </children>
 </Pane>
