--- a/src/doctorAccountPane/DoctorAccountStyle.css
+++ b/src/doctorAccountPane/DoctorAccountStyle.css
@@ -40,3 +40,30 @@
     -fx-font-size: 16;
     -fx-font-family: "Ebrima";
 }
+
+.label_text2 {
+	-fx-font-weight: normal;
+    -fx-font-size: 18;
+    -fx-font-family: "Ebrima";
+}
+
+.change_button {
+	-fx-background-radius: 40;
+	-fx-background-color: white;
+	-fx-font-weight: normal;
+    -fx-font-size: 14;
+    -fx-text-fill: #00000080;
+	-fx-border-width: 2;
+    -fx-border-radius: 40;
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
+}
+
+.change_button:hover {
+	-fx-background-color: #d8d8d8;
+	-fx-font-weight: normal;
+    -fx-text-fill: #00000080;
+	-fx-border-width: 2;
+	-fx-font-size: 14;
+    -fx-border-radius: 40;
+	-fx-border-color: linear-gradient(to bottom left, #00A9CC, #020024);
+}
