--- a/src/doctorAccountPane/DoctorAccountLayout.fxml
+++ b/src/doctorAccountPane/DoctorAccountLayout.fxml
@@ -53,37 +53,38 @@
          </image>
       </ImageView>
       <Separator layoutX="523.0" layoutY="88.0" orientation="VERTICAL" prefHeight="600.0" prefWidth="0.0" />
-      <JFXTextField fx:id="userEmailField" focusColor="#0193bb" labelFloat="true" layoutX="129.0" layoutY="169.0" prefHeight="35.0" prefWidth="240.0" promptText="Doctor email" styleClass="text-field" stylesheets="@../userRegistration/RegistrationStyle.css" unFocusColor="#00000080">
+      <JFXTextField fx:id="userEmailField" focusColor="#0193bb" labelFloat="true" layoutX="129.0" layoutY="150.0" prefHeight="35.0" prefWidth="240.0" promptText="Doctor email" styleClass="text-field" stylesheets="@../userRegistration/RegistrationStyle.css" unFocusColor="#00000080">
          <font>
             <Font name="Ebrima" size="14.0" />
          </font>
       </JFXTextField>
-      <JFXTextField fx:id="userNameField" focusColor="#0193bb" labelFloat="true" layoutX="129.0" layoutY="244.0" prefHeight="35.0" prefWidth="240.0" promptText="Doctor name" styleClass="text-field" stylesheets="@../userRegistration/RegistrationStyle.css" unFocusColor="#00000080">
+      <JFXTextField fx:id="userNameField" focusColor="#0193bb" labelFloat="true" layoutX="129.0" layoutY="280.0" prefHeight="35.0" prefWidth="240.0" promptText="Doctor name" styleClass="text-field" stylesheets="@../userRegistration/RegistrationStyle.css" unFocusColor="#00000080">
          <font>
             <Font name="Ebrima" size="14.0" />
          </font>
       </JFXTextField>
-      <Label layoutX="129.0" layoutY="119.0" styleClass="label_text2" text="Update doctor account" textFill="#0000007e">
+      <Label layoutX="129.0" layoutY="100.0" styleClass="label_text2" text="Update doctor account" textFill="#0000007e">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="130.0" layoutY="407.0" styleClass="label_text2" text="Change password" textFill="#0000007e">
+      <Label layoutX="130.0" layoutY="429.0" styleClass="label_text2" text="Change password" textFill="#0000007e">
          <font>
             <Font name="Ebrima" size="18.0" />
          </font>
       </Label>
-      <JFXButton layoutX="139.0" layoutY="322.0" onMouseClicked="#updateAccount" prefWidth="220.0" styleClass="change_button" text="Update Account" />
-      <JFXButton layoutX="134.0" layoutY="615.0" onMouseClicked="#changePassword" prefWidth="220.0" styleClass="change_button" text="Change password" />
-      <JFXPasswordField fx:id="userNewPassword" focusColor="#0193bb" labelFloat="true" layoutX="129.0" layoutY="457.0" prefHeight="35.0" prefWidth="240.0" promptText="New password" unFocusColor="#00000080">
+      <JFXButton fx:id="updateName" layoutX="139.0" layoutY="350.0" prefWidth="220.0" styleClass="change_button" text="Update Name" />
+      <JFXButton layoutX="134.0" layoutY="637.0" onMouseClicked="#changePassword" prefWidth="220.0" styleClass="change_button" text="Change password" />
+      <JFXPasswordField fx:id="userNewPassword" focusColor="#0193bb" labelFloat="true" layoutX="129.0" layoutY="479.0" prefHeight="35.0" prefWidth="240.0" promptText="New password" unFocusColor="#00000080">
          <font>
             <Font name="Ebrima" size="14.0" />
          </font>
       </JFXPasswordField>
-      <JFXPasswordField fx:id="userOldPassword" focusColor="#0193bb" labelFloat="true" layoutX="129.0" layoutY="537.0" prefHeight="35.0" prefWidth="240.0" promptText="Old password" unFocusColor="#00000080">
+      <JFXPasswordField fx:id="userOldPassword" focusColor="#0193bb" labelFloat="true" layoutX="129.0" layoutY="559.0" prefHeight="35.0" prefWidth="240.0" promptText="Old password" unFocusColor="#00000080">
          <font>
             <Font name="Ebrima" size="14.0" />
          </font>
       </JFXPasswordField>
+      <JFXButton fx:id="updateEmail" layoutX="134.0" layoutY="220.0" prefWidth="220.0" styleClass="change_button" text="Update Email" />
    </children>
 </Pane>
