--- a/src/parametersRecordPane/ParametersRecordLayout.fxml
+++ b/src/parametersRecordPane/ParametersRecordLayout.fxml
@@ -44,7 +44,7 @@
       </Label>
       <Pane fx:id="viewPane" layoutX="61.0" layoutY="118.0" prefHeight="329.0" prefWidth="490.0" />
       <AnchorPane layoutX="145.0" layoutY="506.0" />
-      <JFXButton fx:id="startRecording" layoutX="177.0" layoutY="603.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#startStopRecording" prefHeight="40.0" prefWidth="204.0" styleClass="add_button" text="START RECORDING!">
+      <JFXButton fx:id="startRecording" layoutX="177.0" layoutY="603.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="204.0" styleClass="add_button" text="START RECORDING!">
          <font>
             <Font size="16.0" />
          </font>
