--- a/src/patientRecordsPane/PatientRecordsStyle.css
+++ b/src/patientRecordsPane/PatientRecordsStyle.css
@@ -31,12 +31,14 @@
 
 .label_text {
 	-fx-font-weight: normal;
-    -fx-font-size: 16;
+    -fx-font-size: 18;
     -fx-font-family: "Ebrima";
+    -fx-font-color: #00000080;
 }
 
 .label_text_bold {
 	-fx-font-weight: bold;
-    -fx-font-size: 16;
+    -fx-font-size: 18;
     -fx-font-family: "Ebrima";
+    -fx-font-color: #00000080;
 }
